# autolevels

./: .gitignore  CHANGELOG.md  LICENSE  README.md  autolevels.py  inference.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
autolevels/: __init__.py  autolevels.py  export.py  inference.py
autolevels/data/: dt_template_v5.xmp
images/: .gitignore
models/: free_test.onnx  free_test.pt
tests/: conftest.py  test_cli.py  test_evaluate_fstring.py  test_functions.py
